k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-server
spec:
  selector:
    app: http-server
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
